# h4sim

./: README.md  bracketChecker.py  config.json  h4sim.py  hoi4_ship_stats_output.csv  pyproject.toml  ship.json  shipStatbuilder.py  sim2.py
shipdata/: 01_generic_ship_modules.txt  fra_ship_modules.txt  ger_ship_modules.txt  ita_ship_modules.txt  jap_ship_modules.txt  sov_ship_modules.txt  usa_ship_modules.txt
