[project]
name = "h4ships"
version = "0.1.0"
description = ""
authors = [
    {name = "sotnikop",email = "anon@redacted.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
